0.26 (in development):
	* No suggest for email addresses
	+ t.co links expander
	+ Showing tumblr.com links as an icons
	* Bug with focused tweet editor after send is fixed (#74)

0.25:
	* Bug with suggest select with mouse is fixed

0.24:
	* Unhide the tweet client and time info after reply
	+ Email addresses are now links
	* Fixed email parsing as a screen_name
	* Now Twic is even faster than before
	* Reply to the retweet reverted to the original way
	+ Suggest for nick

0.23:
	* Fix for unread tweets count marker

0.22:
	* Friends storage rewritten
	* Resettings the last tweet id after account removement

0.21:
	* Fixed the hash replace for urls like test.dom/#hash
	* Pulsate the add account button when no account registered (waiting for CSSO to support webkit keyframes)
	* Reply to the retweet is the reply to retweeter

0.20:
	* Fixing a first extension initialization possible bug

0.19:
	* Goog object is not available in developer version of Google Chrome

0.18:
	* User nick is moved to the right top on the profile page
	* Bug with automatic Twic authorization on the pages for another applications is fixed
	* Small things in interface
	* Hope the bug with first authorization and OAuth timestamp is finally fixed

0.17:
	* New tweet editor is now smaller on blur
	* "Insert link" button is now disabled if we can't do it
	+ Displaying the tweet time (optional, disabled by default)
	+ Displaying the user Twitter client in tweet (optional, disabled by default)
	+ Settings button on the first page
	- Donate button
	+ Additional "locked" icon in protected user profiles
	* Retweet button is disabled for the protected user tweets
	* Additional tweet info is hidden while replying

0.16:
	* Fix for the urls without protocol (thanks @Stammru)
	+ Separator between unread and old tweets

0.15:
	* Fix for the error message is not showing

0.14:
	+ Error message if extension can't add a new account